<resources>
    <string name="app_name">Aligulac</string>
    <string name="app_name_info">Aligulac App for Android</string>

    <string name="activity_prediction">Prediction Bo-N</string>
    <string name="activity_result">Prediction Result</string>
    <string name="activity_info">Info</string>

    <string name="general_player1">Player 1</string>
    <string name="general_player2">Player 2</string>
    <string name="vs">vs</string>

    <string name="hint_select_player">Please select player.</string>
    <string name="hint_select_length">Please select length.</string>
    <string name="hint_not_connected">Please connect to the internet.</string>
    <string name="prediction_bestOf">Best-of</string>
    <string name="outcomes">Outcomes</string>

    <string name="app_info">Thanks for using this app! If you find any bugs or have a feature request or might find
        something to improve just drop me a line!
    </string>
    <string name="app_version">v %1$s (%2$d)</string>
    <string-array name="info_dropdown">
        <item>Bug</item>
        <item>Improvement</item>
        <item>Feature request</item>
    </string-array>
    <string name="send_feedback">Send feedback</string>
    <string name="open_source">This app is Open Source. You can find the whole source code on GitHub:
        http://www.github.com/ungesehn/AligulacAndroid
    </string>
    <string name="libraries">This app uses the following libraries:</string>
</resources>
