<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.aligulac.app.InfoActivity">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/TextAppearance.AppCompat.Headline"
                  android:paddingStart="2dp"
                  android:text="@string/app_name_info"/>

        <TextView android:id="@+id/app_version"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  tools:text="v X.X"
                  android:paddingTop="4dp"
                  android:paddingStart="2dp"
                  style="@style/TextAppearance.AppCompat.Caption"/>

        <Space android:layout_width="match_parent" android:layout_height="24dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_info"
                  android:paddingStart="2dp"
                  android:paddingEnd="2dp"
                  style="@style/TextAppearance.AppCompat.Body1"
                />

        <Spinner android:id="@+id/feedback_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/info_dropdown"
                 android:layout_marginTop="12dp"/>

        <EditText android:id="@+id/feedback"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:lines="2"
                  android:layout_marginTop="4dp"/>

        <Button android:id="@+id/btn_send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/send_feedback"
                style="@style/Widget.AppCompat.Button.Colored"/>

        <Space android:layout_width="match_parent" android:layout_height="24dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/open_source"
                  android:autoLink="web"
                  android:paddingStart="2dp"
                  android:paddingEnd="2dp"
                  style="@style/TextAppearance.AppCompat.Body1"/>

        <Space android:layout_width="match_parent" android:layout_height="24dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/libraries"
                  style="@style/TextAppearance.AppCompat.Body2"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:autoLink="web"
                  android:text="\u2022 Butterknife https://github.com/JakeWharton/butterknife"
                  style="@style/TextAppearance.AppCompat.Body1"
                  android:layout_marginTop="8dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:autoLink="web"
                  android:text="\u2022 Retrofit https://github.com/square/retrofit"
                  style="@style/TextAppearance.AppCompat.Body1"
                  android:layout_marginTop="8dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:autoLink="web"
                  android:text="\u2022 Android Support Library v7 http://developer.android.com/tools/support-library"
                  style="@style/TextAppearance.AppCompat.Body1"
                  android:layout_marginTop="8dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:autoLink="web"
                  android:text="\u2022 Android Design Library http://developer.android.com/tools/support-library"
                  style="@style/TextAppearance.AppCompat.Body1"
                  android:layout_marginTop="8dp"/>


    </LinearLayout>
</ScrollView>